* Exposing <<config-classes-excluded-from-instrumentation>> config - {pull}1187[#1187]
* Add support for naming transactions based on Grails controllers. Supports Grails 3+ - {pull}1171[#1171]
* Add support for the Apache/Alibaba Dubbo RPC framework
* Async Profiler version upgraded to 1.7.1, with a new debugging flag for the stack frame recovery mechanism - {pull}1173[#1173]

[float]
===== Bug fixes
* Fixes `IndexOutOfBoundsException` that can occur when profiler-inferred spans are enabled.
  This also makes the profiler more resilient by just removing the call tree related to the exception (which might be in an invalid state)
  as opposed to stopping the profiler when an exception occurs.
* Fix `NumberFormatException` when parsing Ingres/Actian JDBC connection strings - {pull}1198[#1198]
* Prevent agent from overriding JVM configured truststore when not using HTTPS for communication with APM server - {pull}1203[#1203]
* Fix `java.lang.IllegalStateException` with `jps` JVM when using continuous runtime attach - {pull}1205[1205]
* Fix agent trying to load log4j2 plugins from application - {pull}1214[1214]
* Fix memory leak in gRPC instrumentation plugin - {pull}1196[1196]
* Fix HTTPS connection failures when agent is configured to use HTTPS to communicate with APM server {pull}1209[1209]

[[release-notes-1.16.0]]
==== 1.16.0 - 2020/05/13

[float]
===== Features

* The log correlation feature now adds `error.id` to the MDC. See <<supported-logging-frameworks>> for details. - {pull}1050[#1050]
* Deprecating the `incubating` tag in favour of the `experimental` tag. This is not a breaking change, so former
<<config-disable-instrumentations,`disable_instrumentation`>> configuration containing the `incubating` tag will still be respected - {pull}1123[#1123]
* Add a `--without-emulated-attach` option for runtime attachment to allow disabling this feature as a workaround.
* Add workaround for JDK bug JDK-8236039 with TLS 1.3 {pull}1149[#1149]