@@ -52,6 +52,7 @@ The latter uses https://github.com/elastic/ecs-logging-java[ecs-logging-java] to
 * Add support for naming transactions based on Grails controllers. Supports Grails 3+ - {pull}1171[#1171]
 * Add support for the Apache/Alibaba Dubbo RPC framework
 * Async Profiler version upgraded to 1.7.1, with a new debugging flag for the stack frame recovery mechanism - {pull}1173[#1173]
+* Add capturing of request body in Elasticsearch queries: `_msearch`, `_count`, `_msearch/template`, `_search/template`, `_rollup_search` - {pull}1222[#1222]
 
 [float]
 ===== Bug fixes
